test/2/type/ret-mismatch.err
test/2/type/ret-mismatch.ploy:1:19-22: type error: function body actual type is not return type. actual type: Str
| main = fn ()%Void "x";
                    ~~~
test/2/type/ret-mismatch.ploy:1:14-18: note: return type: Void
| main = fn ()%Void "x";
               ~~~~
